--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
   <div class="container-fluid">
     <%= link_to "/", class: "navbar-brand" do %>
-      <%= image_tag "logo2.png" %>
+      <%= image_tag "logo.png" %>
     <% end %>
   </div>
 
@@ -9,7 +9,7 @@
   </div>
 
   <div class="icones-contact">
-    <%= link_to "/", class: "navbar-icone" do %>
+    <%= link_to "", class: "navbar-icone" do %>
       <%= image_tag "phone.png" %>
     <% end %>
     <%= link_to "https://www.facebook.com/lignonvivianpaysage", class: "navbar-icone", target: :_blank do %>
